# first_fastapi_prjct

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-composemaybee  pyproject.toml
migrations/: env.py
migrations/versions/: 15de663f3729_create_parcel_tables.py  b7507cc2af54_seed_parcel_types.py
src/app/: main.py
src/app/api/v1/: admin.py  parcel_types.py  parcels.py
src/app/clients/: cbr.py
src/app/core/: config.py  db.py  logging.py  session.py
src/app/models/: __init__.py  parcel.py  parcel_type.py
src/app/repositories/: parcel.py  parcel_type.py
src/app/schemas/: parcel.py  parcel_type.py
src/app/services/: calculate_delivery.py  currency.py  delivery_cost.py  parcel.py
src/app/tasks/: scheduler.py
tests/: conftest.py  test_parcel_types.py  test_parcels.py
